--- a/samconfig.toml
+++ b/samconfig.toml
@@ -3,9 +3,9 @@ version = 0.1
 [default.deploy]
 [default.deploy.parameters]
 stack_name = "sam-app"
-s3_bucket = "aws-sam-cli-managed-default-samclisourcebucket-1oilo0iw91nv0"
+s3_bucket = "aws-sam-cli-managed-default-samclisourcebucket-8hlfcur4mmfq"
 s3_prefix = "sam-app"
-region = "us-east-1"
+region = "sa-east-1"
 confirm_changeset = true
 capabilities = "CAPABILITY_IAM"
 image_repositories = []
